iptables/vpsQbt/rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Mar 16 21:45:22 2025
*filter
:INPUT DROP [2461:107748]
:FORWARD DROP [54:2160]
:OUTPUT ACCEPT [49094:40155395]
:DOCKER-USER - [0:0]
-A INPUT -m state --state INVALID -j DROP
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -m recent --set --name DEFAULT --mask 255.255.255.255 --rsource
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -m recent --update --seconds 90 --hitcount 25 --name DEFAULT --mask 255.255.255.255 --rsource -j DROP
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p udp -m udp --dport 51820 -j ACCEPT
-A INPUT -i wg0 -p icmp -j ACCEPT
-A INPUT -i wg0 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "IPTables-Dropped: "
-A INPUT -s 10.0.0.0/24 -i ens3 -j DROP
-A FORWARD -j DOCKER-USER
-A FORWARD ! -s 10.0.0.0/24 -i wg0 -j DROP
-A FORWARD -i wg0 -o ens3 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens3 -o wg0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wg0 -o wg0 -j ACCEPT
-A FORWARD -m limit --limit 5/min -j LOG --log-prefix "IPTables-Dropped: "
-A DOCKER-USER -p tcp -m tcp --dport 6881 -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j ACCEPT
-A DOCKER-USER -p tcp -m tcp --dport 6881 -m state --state ESTABLISHED -j ACCEPT
-A DOCKER-USER -p udp -m udp --dport 6881 -m limit --limit 200/sec --limit-burst 400 -j ACCEPT
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Sun Mar 16 21:45:22 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Mar 16 21:45:22 2025
*nat
:PREROUTING ACCEPT [5236:457306]
:INPUT ACCEPT [21:1948]
:OUTPUT ACCEPT [26:2169]
:POSTROUTING ACCEPT [39:3077]
-A POSTROUTING -s 10.0.0.0/24 -o ens3 -j MASQUERADE
COMMIT
